changed header and footer to be fixed regardless of scrolling

--- a/pages/legal-page.html
+++ b/pages/legal-page.html
@@ -16,7 +16,7 @@
             <a href="/">Back to main page</a>
           </li>
           <li>
-            <a href="./fancy-robot.html">Funny Robot Face</a>
+            <a href="./fancy-robot.html">Fancy Robot Face</a>
           </li>
         </ul>
       </nav>
